[build-system]
requires = ["flit_core >=16.0.0-dev"]
build-backend = "flit_core.buildapi"

[project]
name = "my_universal_auth"
authors = [{name = "Tirath", email = "test@example.com"}]
description = "Universal OAuth for Multiple Sites"
requires-python = ">=16.0.0-dev"
dynamic = ["version"]

[tool.flit.module]
name = "my_universal_auth"